(feat) Add basic integration auth page, add auth route to server

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,3 +9,15 @@ p.navbar-text.navbar-right {
 body {
   padding-top: 70px;
 }
+
+#auth-body {
+  padding-top: 0px
+}
+
+#auth-icon {
+  float: left;
+}
+
+#auth-button {
+  float: right;
+}
