--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,6 +4,7 @@
 
 p.navbar-text.navbar-right {
   margin-right: 15px;
+  color: #eee;
 }
 
 .navbar-collapse {
@@ -18,6 +19,7 @@ p.navbar-text.navbar-right {
 
 body {
   padding-top: 70px;
+  background-color: #6699cc;
 }
 
 #auth-body {
@@ -39,5 +41,27 @@ body {
 }
 
 .table {
-  font-color: black;
+  color: black;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #033d62;
+  color: #eee;
+}
+
+.sort-column {
+  background-color: #3674ab;
+  color: #eee;
+}
+
+body > div > div > div:nth-child(2) > div > div.react-bs-table > div.react-bs-container-header.table-header-wrapper > table > thead > tr > th:nth-child(1) {
+  background-color: #3674ab;
+}
+
+.navbar-header {
+  background-color: #033d62;
+}
+
+.navbar-toggle {
+  background-color: #eee;
 }
