(style) Update color styling for charts and add Jumbotron to user.js

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -50,12 +50,12 @@ body {
 }
 
 .sort-column {
-  background-color: #3674ab;
+  background-color: #033d62;
   color: #eee;
 }
 
 body > div > div > div:nth-child(2) > div > div.react-bs-table > div.react-bs-container-header.table-header-wrapper > table > thead > tr > th:nth-child(1) {
-  background-color: #3674ab;
+  background-color: #033d62;
 }
 
 .navbar-header {
