(refactor) Update headers to user PageHeader from react-bootstrap

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -65,3 +65,10 @@ body > div > div > div:nth-child(2) > div > div.react-bs-table > div.react-bs-co
 .navbar-toggle {
   background-color: #eee;
 }
+
+div.page-header {
+  color: #eee;
+}
+h5 {
+  color: #eee;
+}
