(refactor) Fix chart to use authorization token and remove unused components

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -87,8 +87,8 @@ h5 {
 }
 
 .extraversion_big5 {
- fill:  #6495ED;
- background:  #6495ED;
+ fill:  #944dff;
+ background:  #944dff;
 }
 
 .agreeableness_big5 {
